# late-sh

./: .dockerignore  .gitguardian.yaml  .gitignore  .pr-diff-context.md  AUDIO.md  BOOTH_PLAN.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  DJ.md  DOOR.md  DRAGON.md  Dockerfile  GAMES.md  MUSIC.md  Makefile  NET.md  NOTICE  PLAN.md  README.md  REDESIGN.md  RENDER_COST.md  SCALE.md  THEME.md  UP.md  default.nix  deny.toml  docker-compose.check.yml  docker-compose.lord-bbs.yml  docker-compose.yml  flake.nix  pr.md
late-bastion/: BASTION.md  Cargo.toml  README.md
late-bastion/src/: config.rs  handshake.rs  lib.rs  main.rs  proxy.rs  ssh.rs
late-bastion/tests/: proxy_smoke.rs
late-brogue/: Cargo.toml
late-brogue/src/: config.rs  host.rs  host_test.rs  identity.rs  identity_test.rs  main.rs  playname.rs  playname_test.rs  server.rs  server_test.rs
late-dcss/: Cargo.toml
late-dcss/src/: config.rs  host.rs  host_test.rs  identity.rs  identity_test.rs  main.rs  playname.rs  playname_test.rs  server.rs  server_test.rs
late-nethack/: Cargo.toml
late-nethack/src/: config.rs  host.rs  identity.rs  identity_test.rs  main.rs  playname.rs  playname_test.rs  server.rs  server_test.rs
late-ssh/: Cargo.toml
late-ssh/assets/aquarium/creatures/: anchovy.kdl  bigbert.kdl  clownfish.kdl  example.noload.kdl  pufferfish.kdl  wigglewort.kdl
late-ssh/assets/nes/: README.md  bobl.nes  crillion.nes  oopis_quest.nes
late-ssh/assets/splash_tips/: new_and_returning_users_tip_pool.json  returning_users_tip_pool.json
late-ssh/assets/usernames/: curated-modifiers.txt  curated-nouns.txt
late-ssh/src/: api.rs  api_internal_test.rs  api_test.rs  authz.rs  config.rs  dartboard.rs  dartboard_test.rs  exec.rs  lib.rs  main.rs  metrics.rs  native_api.rs  paired_clients.rs  paired_clients_test.rs  session.rs  session_bootstrap.rs  session_io.rs  session_test.rs  ssh.rs  ssh_ban_test.rs  ssh_internal_test.rs  ssh_test.rs  state.rs  terminal_size.rs  terminal_size_test.rs  test_helpers.rs  tunnel.rs  usernames.rs  web.rs  web_tunnel.rs  web_tunnel_test.rs
late-ssh/src/app/: announcements.rs  announcements_test.rs  dashboard_flow_test.rs  input.rs  input_flow_test.rs  input_test.rs  mod.rs  qr.rs  render.rs  render_test.rs  singleton_isolation_test.rs  smoke_test.rs  splash_tips.rs  state.rs  state_internal_test.rs  state_test.rs  tick.rs  tick_test.rs  visualizer.rs
late-ssh/src/app/activity/: channel.rs  event.rs  filter.rs  filter_test.rs  lounge.rs  lounge_test.rs  mod.rs  panel.rs  publisher.rs
late-ssh/src/app/ai/: ghost.rs  ghost_test.rs  svc.rs
late-ssh/src/app/aquarium/: state.rs  ui.rs
late-ssh/src/app/arcade/: CONTEXT.md  input.rs  input_test.rs  mod.rs  ui.rs  ui_test.rs  workspace.rs
late-ssh/src/app/artboard/: CONTEXT.md  data.rs  input.rs  input_test.rs  mod.rs  page.rs  page_test.rs  provenance.rs  provenance_test.rs  state.rs  state_internal_test.rs  state_test.rs  svc.rs  svc_test.rs  test_support.rs  ui.rs  ui_test.rs
late-ssh/src/app/audio/: CONTEXT.md  client_state.rs  client_state_test.rs  input.rs  input_test.rs  liquidsoap.rs  mod.rs  state.rs  stations.rs  svc.rs  svc_internal_test.rs  svc_test.rs  viz.rs  viz_test.rs  youtube.rs
late-ssh/src/app/bonsai/: care.rs  care_test.rs  mod.rs  modal_input.rs  modal_ui.rs  state.rs  state_test.rs  svc.rs  svc_test.rs  ui.rs  ui_test.rs
late-ssh/src/app/bonsai_v2/: CONTEXT.md  mod.rs  modal_input.rs  modal_ui.rs  ratty_3d.rs  render.rs  render_test.rs  state.rs  state_test.rs
late-ssh/src/app/cat/: mod.rs  modal_input.rs  modal_ui.rs  state.rs  svc.rs  ui.rs
late-ssh/src/app/chat/: CONTEXT.md  action.rs  action_test.rs  commands.rs  commands_test.rs  cup_sixel.rs  image_upload.rs  inline_image.rs  input.rs  input_test.rs  list_ui.rs  mod.rs  sheet_test.rs  special_badges.rs  special_badges_test.rs  state.rs  state_internal_test.rs  svc.rs  svc_internal_test.rs  svc_test.rs  ui.rs  ui_test.rs  ui_text.rs  ui_text_test.rs
late-ssh/src/app/clubhouse/: CONTEXT.md  input.rs  lobby.rs  lobby_test.rs  map.rs  map_test.rs  mod.rs  state.rs  state_test.rs  ui.rs  ui_test.rs
late-ssh/src/ircd/: CONTEXT.md  auth.rs  conn.rs  conn_test.rs  mod.rs  proj.rs  proj_test.rs  registry.rs  registry_test.rs  replies.rs  replies_test.rs  serve.rs  serve_test.rs
late-ssh/src/moderation/: command.rs  command_test.rs  event.rs  mod.rs  policy.rs  policy_test.rs  service.rs  session_effects.rs
late-ssh/src/native_api/: artboard.rs  articles.rs  auth.rs  bonsai.rs  chat.rs  chips.rs  games.rs  media.rs  mod.rs  notifications.rs  profile.rs  rss.rs  showcase.rs  users.rs  work_profiles.rs  ws.rs
late-ssh/tests/: app_dashboard_flow.rs  app_input_flow.rs  app_smoke.rs  app_splash_tips.rs  audio_liquidsoap.rs  audio_queue_reconcile.rs  pinstar_browser.rs  rebels_proxy.rs  ssh_smoke.rs  tunnel_smoke.rs  ws_smoke.rs
late-ssh/tests/arcade/: chips.rs  nonogram.rs
late-ssh/tests/artboard/: main.rs  state.rs  svc.rs
late-ssh/tests/bonsai/: svc.rs
late-ssh/tests/cat/: svc.rs
late-ssh/tests/chat/: announcements.rs  main.rs  news.rs  sheet.rs  showcase.rs  svc.rs  work.rs
late-ssh/tests/common/: main.rs  splash_tips.rs
late-ssh/tests/daily/: svc.rs
late-ssh/tests/games/: artboard.rs  dartboard.rs  main.rs
late-ssh/tests/goldfish/: svc.rs
late-ssh/tests/helpers/: mod.rs
late-ssh/tests/ircd/: smoke.rs
late-ssh/tests/pet/: svc.rs
late-ssh/tests/profile/: svc.rs  ui_flow.rs
late-ssh/tests/vote/: svc.rs
late-usurper/: Cargo.toml
late-usurper/src/: config.rs  cp437.rs  cp437_test.rs  dropfile.rs  dropfile_test.rs  host.rs  identity.rs  identity_test.rs  input_filter.rs  input_filter_test.rs  main.rs  nodes.rs  nodes_test.rs  playname.rs  playname_test.rs  seed.rs  seed_test.rs  server.rs
late-web/: CONTEXT.md  Cargo.toml
late-web/src/: config.rs  error.rs  error_test.rs  lib.rs  metrics.rs
late-web/src/pages/: error.html  layout.html  mod.rs  stream.rs  stream_internal_test.rs  stream_test.rs
late-web/static/: spectate.css  spectate.js  style.css
late-web/tests/: dashboard.rs  spectate.rs  stream.rs
(+1357 files in other folders)
